# healthcare-ml-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sh  pyproject.toml
airflow/dags/: retrain_dag.py
app/: main.py  model_loader.py  schemas.py
app/templates/: index.html
database/: db_connection.py  models.py
ml/: evaluate.py  predict.py  preprocess.py  train.py
scripts/: airflow-entrypoint.sh  clean.py  entrypoint.sh  fetch.py  ingest.py
